feat: 通知小程序模板 + 产品年度预算 + 图表范围归一化
- 新增 NotificationMiniProgramTemplate 与 ProductAnnualBudget 模块
- Flyway V41-V44：模板活跃版本窗口、唯一活跃约束、图表范围归一化、产品年度预算
- BudgetManagement 前端页面
- 文档归档：plan/done 子目录

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>